--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "fastify-decorators": "^3.10.0",
     "fastify-formbody": "^5.2.0",
     "fastify-helmet": "^5.3.2",
+    "fastify-jwt": "^4.1.3",
     "fastify-multipart": "^5.1.0",
     "glob": "^7.1.6",
     "google-auth-library": "^7.10.2",
